--- a/client/src/components/radio-button/radio-button.styles.scss
+++ b/client/src/components/radio-button/radio-button.styles.scss
@@ -1,5 +1,5 @@
 .size-option {
-    padding: 20px 10px;
+    padding: 30px 10px;
     border: 1px solid #E7E7E7;
     width: 100%;
     border-radius: 5px;
@@ -24,7 +24,10 @@
         -webkit-appearance: none;
         -moz-appearance: none;
         appearance: none;
-        
+        visibility: hidden;
+        opacity: 0;
+        display: none;
+
         &:checked + label {
             background: black;
             color: #fff;
