--- a/client/src/components/video/video.styles.scss
+++ b/client/src/components/video/video.styles.scss
@@ -1,3 +1,3 @@
 video {
-    height: auto;
+    height: 100%;
 }
